--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,9 +36,9 @@ a { cursor: pointer; }
 .entry
 {
     display: block;
-    margin: 4px auto;
+    margin: 2px auto;
     padding: 20px;
-    width: 500px;
+    width: 600px;
     background: #000;
     text-align: left;
     color: #fff;
@@ -60,10 +60,20 @@ a { cursor: pointer; }
     margin-top: 6px;
 }
 .pict
-{
+{   
+    background-position: center;
+    background-size:cover;
     display: inline-block;
-    border: none;
     margin: 10px 0px 0px 0px;
     width: 100%;
-    height: 100%;
+    min-height: calc(100vh * 0.3);
+}
+.round
+{
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 2px; 
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 2px; 
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 2px; 
 }
