--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,6 +50,7 @@ a { cursor: pointer; }
 }
 .project
 {
+    font-size: 1.2em;
     display: block;
     font-weight: bold;
 }
@@ -68,12 +69,17 @@ a { cursor: pointer; }
     width: 100%;
     min-height: calc(100vh * 0.3);
 }
-.round
+
+.footer
 {
-  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
-  -webkit-border-radius: 2px; 
-  /* Firefox 1-3.6 */
-  -moz-border-radius: 2px; 
-  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
-  border-radius: 2px; 
+    margin-top: 100px;
+    display: block;
+    width: 100%;
+    height: 100px;
+    background-color: #000;
+    opacity: 0.9;
 }
+
+/* Theme */
+.round
+{ -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; }
