--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,12 +72,14 @@ a { cursor: pointer; }
 
 .footer
 {
+    position: absolute;
     margin-top: 100px;
     display: block;
     width: 100%;
     height: 100px;
     background-color: #000;
     opacity: 0.9;
+    bottom: 0px;
 }
 
 /* Theme */
