--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-body { font-family: 'SourceSansPro_Regular'; background:#000; padding: 0px; overflow-x: hidden; transition: opacity 150ms; opacity: 1 !important; color: #fff; }
+body { font-family: 'SourceSansPro_Regular'; background:#ccc; margin: 0px; padding: 0px; overflow-x: hidden; transition: opacity 150ms; opacity: 1 !important; color: #fff;  }
 a { cursor: pointer; }
 
 .fullscreen
@@ -14,25 +14,35 @@ a { cursor: pointer; }
   background-position: top left, center center, bottom center;
   background-repeat: repeat, no-repeat, no-repeat;
   background-image: url("../img/noise.png"), url('../img/QVB.jpg');
-
-  text-align: center;
   color: white;
 }
 
 .header
 {
+    display: block;
     position: relative;
-    top:0px;
-    left:0px;
-    width:100vw;
-    max-height:calc(100vh - 135px);
-    background-position: center;
-    background-size:cover;
-    transition: all 150ms;
+    width:100%;
     min-height:100px;
+    max-height: calc(100vh - 100px);
     background-color: #000;
-    margin-bottom: 100px;
 }
+.content
+{
+    display: block;
+    position: relative;
+    min-height: calc(100vh - 200px);
+    padding: 100px 0px 100px 0px;
+}
+.footer
+{
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 100px;
+    bottom: 0; left: 0; right: 0;
+    background-color: #fff;
+}
+
 .entry
 {
     display: block;
@@ -70,17 +80,7 @@ a { cursor: pointer; }
     min-height: calc(100vh * 0.3);
 }
 
-.footer
-{
-    position: absolute;
-    margin-top: 100px;
-    display: block;
-    width: 100%;
-    height: 100px;
-    background-color: #000;
-    opacity: 0.9;
-    bottom: 0px;
-}
+
 
 /* Theme */
 .round
