--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-body { font-family: 'SourceSansPro_Regular'; background:#ccc; margin: 0px; padding: 0px; overflow-x: hidden; transition: opacity 150ms; opacity: 1 !important; color: #fff;  }
+body { font-family: 'SourceSansPro_Regular'; background:#ccc; margin: 0px; padding: 0px; overflow-x: hidden; transition: opacity 150ms; opacity: 1 !important; color: #fff; }
 a { cursor: pointer; }
 
 .fullscreen
@@ -38,9 +38,10 @@ a { cursor: pointer; }
     display: block;
     position: relative;
     width: 100%;
-    height: 100px;
+    height: 200px;
     bottom: 0; left: 0; right: 0;
     background-color: #fff;
+    padding: 0px 40px;
 }
 
 .entry
@@ -52,16 +53,25 @@ a { cursor: pointer; }
     background: #000;
     text-align: left;
     color: #fff;
+    -webkit-transition: transform 0.2s; /* For Safari 3.1 to 6.0 */
+    transition: transform 0.2s;
 }
+.entry:hover
+{
+    -webkit-transform: translateY(6px);
+    -ms-transform: translateY(6px);
+    transform: translateX(6px);
+}
+
 .date
 {
-    display: block;
+    display: inline-block;
     color: #999999;
 }
 .project
 {
     font-size: 1.2em;
-    display: block;
+    display: inline-block;
     font-weight: bold;
 }
 .note
