--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
-body { font-family: 'SourceSansPro_Regular'; background:#ccc; margin: 0px; padding: 0px; overflow-x: hidden; transition: opacity 150ms; opacity: 1 !important; color: #fff; }
+body { font-family: 'SourceSansPro_Regular'; background:#000; margin: 0px; padding: 0px; overflow-x: hidden; transition: opacity 150ms; opacity: 1 !important; color: #fff; }
 a { cursor: pointer; }
 
-body
+.header
 {
   -webkit-background-size: 100px 100px, cover, cover;
   -moz-background-size: 100px 100px, cover, cover;
@@ -9,8 +9,6 @@ body
   -o-background-size: 100px 100px, cover, cover;
   background-position: top left, center center, bottom center;
   background-repeat: repeat, no-repeat, no-repeat;
-  background-attachment: fixed;
-  background-image: url("../img/noise.png"), url('../img/QVB.jpg');
 }
 
 .header
@@ -18,7 +16,8 @@ body
     display: block;
     position: relative;
     width:100%;
-    min-height:100px;
+    height:100%;
+    min-height: 50vh;
     max-height: calc(100vh - 100px);
     background-color: #000;
 }
@@ -46,9 +45,9 @@ body
     margin: 2px auto;
     padding: 20px;
     width: 600px;
-    background: #000;
+    background: #fff;
     text-align: left;
-    color: #fff;
+    color: #000;
     -webkit-transition: transform 0.2s; /* For Safari 3.1 to 6.0 */
     transition: transform 0.2s;
 }
@@ -80,7 +79,20 @@ body
     width: 100%;
     min-height: calc(100vh * 0.3);
 }
-
+.pict:hover
+{
+    cursor: pointer;
+}
+.lightbox
+{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0; left: 0;
+    background-color: #000;
+    opacity: 0.5;
+}
 
 
 /* Theme */
