--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,9 @@ a { cursor: pointer; }
 #footer a.icon.github { background-image: url("../svg/github.svg"); }
 #footer a.icon.twitter { background-image: url("../svg/twitter.svg"); }
 
+#stats { display: block; margin: 0px auto 20px auto; padding: 0px 60px; max-width: 700px; background: #000; text-align: left; color: #fff; font-size: 20px; font-family: 'SourceSansPro_Bold' }
+#stats::after {clear: both;}
+#stats #stat { display: block; margin-right: 10px; background-color: #fff; color: #000; padding: 4px 8px; max-width: 100px}
 #entry { border-top: 1px solid #444 ; display: block; margin: 0px auto 2px auto; padding: 20px 60px; max-width: 700px; background: #000; text-align: left; color: #fff; }
 #entry #date { display: inline-block; color: #999999; }
 #entry #project { display: inline-block; font-family: 'SourceSansPro_Bold'; font-size: 1.2em; font-weight: bold; margin-right: 10px; }
