--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,24 +22,12 @@ a { cursor: pointer; }
     background-color: #000;
 }
 #header .logo { position: fixed; width: 80px; height: 80px; top: 20px; left: 20px; }
-#content
-{
-    display: block;
-    position: relative;
-    min-height: calc(100vh - 200px);
-    padding: 100px 10px 100px 10px;
-}
+#content { display: block; position: relative; min-height: calc(100vh - 200px); padding: 100px 10px 100px 10px; }
+#footer { display: block; background-color: #fff; padding: 0px 40px; }
+#footerwrap { display: block; padding: 50px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #000; }
+#footerwrap .logo { display: block; width: 30px; height: 30px; background-color: black; margin: none; }
 
-#footer
-{
-    display: block;
-    background-color: #fff;
-    padding: 0px 40px;
-}
-#fwrap { display: block; padding: 50px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #000; }
-#fwrap .logo { display: block; width: 30px; height: 30px; background-color: black; margin: none; }
-
-#fwrap a.icon
+#footerwrap a.icon
 {
     background-size: contain;
     background-repeat: no-repeat;
@@ -54,7 +42,7 @@ a { cursor: pointer; }
 #footer a.icon.twitter { background-image: url("../svg/twitter.svg"); }
 
 #stats { display: block; margin: 0px auto 20px auto; padding: 0px 60px; max-width: 700px; text-align: left; color: #fff; font-family: 'SourceSansPro_Bold' }
-#stats #stat { display: inline-block; margin-right: 10px; background-color: #fff; color: #000; padding: 4px 8px; max-width: 100px}
+#stats #stat { display: inline-block; margin: 0px 10px 10px 0px; background-color: #fff; color: #000; padding: 4px 8px; max-width: 100px}
 
 #entry { border-top: 1px solid #444 ; display: block; margin: 0px auto 2px auto; padding: 20px 60px; max-width: 700px; background: #000; text-align: left; color: #fff; }
 #entry #date { display: inline-block; color: #999999; }
@@ -86,13 +74,7 @@ a { cursor: pointer; }
     opacity: 0.5;
 }
 
-.logo
-{
-    background-image: url("../svg/nm.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position-y: center;
-}
+.logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
 #logo.sticky { position: absolute; bottom: 20px; top: initial; }
 
 /* Theme */
