--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,32 +1,14 @@
 body { font-family: 'SourceSansPro_Regular'; background:#000; margin: 0px; padding: 0px; transition: opacity 150ms; opacity: 1 !important; color: #fff; }
 a { cursor: pointer; }
 
-#header
-{
-  -webkit-background-size: 100px 100px, cover, cover;
-  -moz-background-size: 100px 100px, cover, cover;
-  background-size: 100px 100px, cover, cover;
-  -o-background-size: 100px 100px, cover, cover;
-  background-position: top left, center center, bottom center;
-  background-repeat: repeat, no-repeat, no-repeat;
-}
-
-#header
-{
-    display: block;
-    position: relative;
-    width:100%;
-    height:100%;
-    min-height: 50vh;
-    max-height: calc(100vh - 100px);
-    background-color: #000;
-}
+#header { -webkit-background-size: 100px 100px, cover, cover; -moz-background-size: 100px 100px, cover, cover; background-size: 100px 100px, cover, cover; -o-background-size: 100px 100px, cover, cover; background-position: top left, center center, bottom center; background-repeat: repeat, no-repeat, no-repeat; }
+#header { display: block; position: relative; width:100%; height:100%; min-height: 50vh; max-height: calc(100vh - 100px); background-color: #000;}
 #header .logo { position: fixed; width: 80px; height: 80px; top: 20px; left: 20px; }
 #content { display: block; position: relative; min-height: calc(100vh - 200px); padding: 100px 10px 100px 10px; }
 #footer { display: block; background-color: #fff; padding: 0px 40px; }
 #footerwrap { display: block; padding: 50px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #000; }
-#footerwrap .logo { display: block; width: 30px; height: 30px; background-color: black; margin: none; }
-
+#footerwrap:after { clear: both; }
+#footerwrap .logo { display: block; width: 30px; height: 30px; background-color: #000; margin: none; }
 #footerwrap a.icon
 {
     background-size: contain;
@@ -63,15 +45,25 @@ a { cursor: pointer; }
 
 #pict:hover { min-height: calc(100vh * 0.5); cursor: pointer; }
 
-.lightbox
+#lightbox
 {
-    position: absolute;
-    display: block;
+    position: fixed;
+    display: inline-flex;
     width: 100%;
     height: 100%;
     top: 0; left: 0;
-    background-color: #000;
-    opacity: 0.5;
+    background-color: rgba(0, 0, 0, .4);
+    text-align: center;
+}
+#showcase
+{
+    position: relative;
+    display: block;
+    width: 80vw;
+    height: 80vh;
+    margin: auto auto;
+    border-bottom: 1px solid #444;
+    background-color: rgba(0, 0, 0, 1);
 }
 
 .logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
