--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,73 +9,27 @@ a { cursor: pointer; }
 #footerwrap { display: block; padding: 50px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #000; }
 #footerwrap:after { clear: both; }
 #footerwrap .logo { display: block; width: 30px; height: 30px; background-color: #000; margin: none; }
-#footerwrap a.icon
-{
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position-y: center;
-    display: block;
-    width: 20px; height: 20px;
-    float: right;
-    margin: 10px 0px 0px 20px;
-}
+#footerwrap a.icon { background-size: contain; background-repeat: no-repeat; background-position-y: center; display: block; width: 20px; height: 20px; float: right; margin: 10px 0px 0px 20px; }
 
 #footer a.icon.github { background-image: url("../svg/github.svg"); }
 #footer a.icon.twitter { background-image: url("../svg/twitter.svg"); }
 
 #stats { display: block; margin: 0px auto 20px auto; padding: 0px 60px; max-width: 700px; text-align: left; color: #fff; font-family: 'SourceSansPro_Bold' }
 #stats #stat { display: inline-block; margin: 0px 10px 10px 0px; background-color: #fff; color: #000; padding: 4px 8px; max-width: 100px}
+#stats #stat:hover { background-color: #666; color: #fff; cursor: pointer; }
 
 #entry { border-top: 1px solid #444 ; display: block; margin: 0px auto 2px auto; padding: 20px 60px; max-width: 700px; background: #000; text-align: left; color: #fff; }
 #entry #date { display: inline-block; color: #999999; }
 #entry #project { display: inline-block; font-family: 'SourceSansPro_Bold'; font-size: 1.2em; font-weight: bold; margin-right: 10px; }
 #entry #note { display: block; text-align: left; margin-top: 6px; }
 
-#pict
-{
-    background-position: center;
-    background-size:cover;
-    display: inline-block;
-    margin: 10px 0px 0px 0px;
-    width: 100%;
-    min-height: calc(100vh * 0.3);
-    -webkit-transition: min-height 0.2s; /* For Safari 3.1 to 6.0 */
-    transition: min-height 0.2s;
-}
-
+#pict { background-position: center; background-size:cover; display: inline-block; margin: 10px 0px 0px 0px; width: 100%; min-height: calc(100vh * 0.3); -webkit-transition: min-height 0.2s; transition: min-height 0.2s; }
 #pict:hover { min-height: calc(100vh * 0.5); cursor: pointer; }
 
-#lightbox
-{
-    position: fixed;
-    display: inline-flex;
-    width: 100%;
-    height: 100%;
-    top: 0; left: 0;
-    background-color: rgba(0, 0, 0, .4);
-    text-align: center;
-}
-#showcase
-{
-    position: relative;
-    display: block;
-    width: 60vw;
-    height: 80vh;
-    margin: auto auto;
-    border-bottom: 1px solid #444;
-    background-color: rgba(0, 0, 0, 1);
-    text-align: center;
-}
-#showcase #pict
-{
-    display: inline-block;
-    width: 90%;
-    height: 90%;
-    background-position: center center;
-    background-size:contain;
-    background-repeat: no-repeat;
-
-}
+#lightbox { position: fixed; display: inline-flex; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(0, 0, 0, .4); text-align: center; }
+#showcase { position: relative; display: block; width: 60vw; height: 80vh; margin: auto auto; border-bottom: 1px solid #444; background-color: rgba(0, 0, 0, 1); text-align: center; }
+#showcase #pict { display: inline-block; width: 90%; height: 90%; background-position: center center; background-size:contain; background-repeat: no-repeat; }
+#showcase #post { display: inline-block; width: 90%; text-align: left; margin: auto 0px 0px 0px; bottom: 0px; }
 
 .logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
 #logo.sticky { position: absolute; bottom: 20px; top: initial; }
