--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,7 @@ a { cursor: pointer; }
 #note { display: block; text-align: left; }
 #pict { background-position: center; background-size:cover; display: inline-block; margin-top: 20px; width: 100%; min-height: calc(100vh * 0.4); -webkit-transition: min-height 0.2s; transition: min-height 0.2s; }
 #pict:hover { min-height: calc(100vh * 0.45); cursor: pointer; }
+#gallerypic { display: block; width: 10vw; height: calc(10vw * 1.4); background-position: center; background-size:cover; float: left; margin: 10px; }
 
 #lightbox { position: fixed; display: inline-flex; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(0, 0, 0, .8); text-align: center; }
 #showcase { position: relative; display: inline-block; margin: auto auto; background-color: rgba(0, 0, 0, 1); padding: 20px; }
