--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,8 +30,9 @@ a { cursor: pointer; }
 #pict { background-position: center; background-size:cover; display: inline-block; margin-top: 20px; width: 100%; min-height: calc(100vh * 0.4); -webkit-transition: min-height 0.2s; transition: min-height 0.2s; }
 #pict:hover { min-height: calc(100vh * 0.45); cursor: pointer; }
 #gallerypic { display: block; width: 10vw; height: calc(10vw * 1.4); background-position: center; background-size:cover; float: left; margin: 10px; }
-#topicalphabet { display: block; max-width: 200px; margin: 20px; border-bottom: 1px solid #444; padding: 6px; font-size: 20px; font-weight: bold; }
-#topic { display: block; width: 25vw; margin-left: 40px; }
+#topicblock { display: block; max-width: 30vh; margin: 20px; }
+#topicalphabet { display: block; margin-bottom: 20px; border-bottom: 1px solid #444; padding: 6px; font-size: 20px; font-weight: bold; }
+#topic { display: block; margin-left: 20px; }
 
 /* lightbox */
 #lightbox { position: fixed; display: inline-flex; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(0, 0, 0, .8); text-align: center; }
