--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,7 +24,7 @@ hr { clear: both; }
 #stats #stat { display: inline-block; margin: 0px 10px 10px 0px; background-color: #fff; color: #000; padding: 4px 8px; max-width: 100px}
 #stats #stat:hover { background-color: #1f1f1f; color: #fff; cursor: pointer; }
 
-#entry { border-top: 1px solid #444; display: block; margin: 0px auto 2px auto; padding: 20px 60px; max-width: 700px; text-align: left; color: #fff; opacity: 1 !important; transition: opacity 150ms ease-in;-moz-transition: opactiy 2s ease-in; -o-transition: 150ms ease-in;}
+#entry { border-top: 1px solid #444; display: block; margin: 0px auto 2px auto; padding: 20px 60px; max-width: 700px; text-align: left; color: #fff; }
 
 #date { display: inline-block; color: #999999; }
 #project { display: inline-block; font-family: 'SourceSansPro_Bold'; font-size: 1.2em; font-weight: bold; margin-right: 10px; }
