--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,7 @@ hr { clear: both; }
 #footer a.icon.twitter { background-image: url("../svg/twitter.svg"); }
 
 /* journal */
-#stats { display: block; margin: 50px auto 20px auto; padding: 0px 60px; max-width: 700px; text-align: left; color: #fff; font-family: 'SourceSansPro_Bold' }
+#stats { display: block; margin: 50px auto 20px auto; padding: 0px 40px; text-align: left; color: #fff; font-family: 'SourceSansPro_Bold' }
 #stats #stat { display: inline-block; margin: 0px 10px 10px 0px; background-color: #fff; color: #000; padding: 4px 8px; max-width: 100px}
 #stats #stat:hover { background-color: #1f1f1f; color: #fff; cursor: pointer; }
 #stats .tag { font-size: 1em; color: #999999; margin-left: 6px; }
@@ -44,9 +44,10 @@ hr { clear: both; }
 #pagination { display: block; margin: 30px auto 30px auto; padding: 0px 60px; max-width: 700px; text-align: left; color: #fff; font-family: 'SourceSansPro_Bold'; font-size: 1.2em; font-weight: bold; }
 
 #gallerypic { display: block; width: 10vw; height: calc(10vw * 1.4); background-position: center; background-size:cover; float: left; margin: 10px; }
-#topicblock { display: block; min-width: 20vh; margin: 10px; float: left;}
-#topicalphabet { display: block; margin-bottom: 20px; border-bottom: 1px solid #444; padding: 6px; font-size: 20px; font-weight: bold; user-select: none; -moz-user-select: none; -moz-user-select: none; }
-#topic { display: block; margin-left: 20px; }
+#topicblock { display: block; min-width: 20vh; float: left; margin-bottom: 20px;}
+#topicahead { display: block; margin-bottom: 10px; font-size: 20px; font-weight: bold; user-select: none; -moz-user-select: none; -moz-user-select: none; }
+#topic { display: block; margin: 2px 0px; }
+#topic:hover { text-decoration: underline; }
 
 /* lightbox */
 #lightbox { position: fixed; display: inline-flex; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(0, 0, 0, .8); text-align: center; }
