--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,8 @@
 :root
 {
   --color-almostblack: #020202;
-  --color-footer: #fff;
-  --svg-fill: #000;
+  --color-footer: #020202;
+  --svg-fill: #fff;
 }
 
 body { font-family: 'SourceSansPro_Regular'; background-color: var(--color-almostblack); margin: 0px; padding: 0px; transition: opacity 150ms; opacity: 1 !important; color: #fff; }
