--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,6 @@ a { cursor: pointer; }
 #footerwrap a.icon.twitter { background-image: url("../svg/twitter.svg"); }
 #footerwrap a.icon.webring { background-image: url("../svg/rotonde.svg"); }
 
-/* journal */
 #stats { display: block; margin: 50px auto 20px auto; padding: 0px 40px; text-align: left; color: #fff; }
 #stats #stat { display: inline-block; margin: 0px 10px 10px 0px; background-color: #fff; color: #000; padding: 4px 8px; max-width: 100px}
 #stats #stat:hover { background-color: #1f1f1f; color: #fff; cursor: pointer; }
@@ -39,12 +38,14 @@ a { cursor: pointer; }
 .entry .pict:hover { cursor: pointer; }
 #date { display: inline-block; color: #999999; }
 #note { display: block; text-align: left; }
-
 #gallerypic { display: block; width: 10vw; height: calc(10vw * 1.4); background-position: center; background-size:cover; float: left; margin: 10px; }
+
+/* homepage listing */
 #topicblock { vertical-align: top; min-width: 20vh; float: left; margin-bottom: 20px; margin-right: 20px;}
 #topichead { display: block; font-family: 'SourceSansPro_Bold'; margin-bottom: 10px; font-size: 20px; user-select: none; -moz-user-select: none; -moz-user-select: none; }
 #topic { display: block; margin: 2px 0px; }
-#topic a:hover:after { margin-right: 2px; content: " •"; }
+#topic a:after {  content: ""; }
+#topic a:hover:after { margin-right: 2px; content: " •"; transition: all 150ms;}
 
 /* lightbox */
 #lightbox { position: fixed; display: inline-flex; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(0, 0, 0, .8); text-align: center; }
